--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Media bag",
   "main": "index.js",
   "scripts": {
-    "start" : "node index.js",
+    "start": "node index.js",
     "test": "mocha"
   },
   "repository": {
@@ -35,6 +35,7 @@
     "cheerio": "^0.19.0",
     "express": "^4.13.3",
     "kontainer-di": "^0.9.8",
+    "phantomjs": "^1.9.19",
     "request-promise": "^1.0.2"
   }
 }
