--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Media bag",
   "main": "index.js",
   "scripts": {
+    "postinstall" : "mongoimport -h 127.0.0.1 -p 27017 -d mediabag -c media --jsonArray lib/channels.json",
     "start": "node index.js",
-    "test": "mocha"
+    "test": "mocha lib/*.spec.js"
   },
   "repository": {
     "type": "git",
@@ -32,9 +33,8 @@
   },
   "dependencies": {
     "body-parser": "^1.14.1",
-    "cheerio": "^0.19.0",
     "express": "^4.13.3",
     "kontainer-di": "^0.9.8",
-    "request-promise": "^1.0.2"
+    "promised-mongo": "^1.2.0"
   }
 }
