move and rename channels.json

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Media bag",
   "main": "index.js",
   "scripts": {
-    "postinstall" : "mongoimport -h 127.0.0.1 -p 27017 -d mediabag -c media --jsonArray lib/channels.json",
+    "postinstall" : "mongoimport -h 127.0.0.1 -p 27017 -d mediabag -c media --jsonArray ext/mediaklikk.json",
     "start": "node index.js",
     "test": "mocha lib/*.spec.js"
   },
