--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
+    "express": "^4.14.0",
     "forerunnerdb": "^1.4.25",
+    "moment": "^2.17.1",
     "nightmare": "^2.8.1"
   }
 }
