--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.14.0",
     "forerunnerdb": "^1.4.25",
     "moment": "^2.17.1",
-    "nightmare": "^2.8.1"
+    "node-horseman": "^3.2.0",
+    "phantomjs-prebuilt": "^2.1.14"
   }
 }
