--- a/package.json
+++ b/package.json
@@ -24,16 +24,6 @@
     "url": "https://github.com/balazs4/mediabag/issues"
   },
   "homepage": "https://github.com/balazs4/mediabag#readme",
-  "devDependencies": {
-    "nodemon": "^1.11.0"
-  },
-  "dependencies": {
-    "express": "^4.14.0",
-    "forerunnerdb": "^1.4.25",
-    "lodash": "^4.17.4",
-    "moment": "^2.17.1",
-    "node-horseman": "^3.2.0",
-    "phantomjs-prebuilt": "^2.1.14",
-    "ping-lite": "^1.0.2"
-  }
+  "devDependencies": {},
+  "dependencies": {}
 }
