Next version + m1,m2,m4,duna link update

--- a/package.json
+++ b/package.json
@@ -25,5 +25,7 @@
   },
   "homepage": "https://github.com/balazs4/mediabag#readme",
   "devDependencies": {},
-  "dependencies": {}
+  "dependencies": {
+    "phantom": "^4.0.3"
+  }
 }
